--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.5.2",
     "react": "^18.2.0",
@@ -50,7 +51,7 @@
     "@babel/plugin-transform-private-property-in-object": "^7.22.11",
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.16.0",
     "tailwindcss": "^3.3.3"
   }
 }
